LIST BELUM BUAT
activity_category_beautyncare.xml
activity_category_foodnbev.xml
activity_category_healthnwellness.xml
activity_category_healthnwellness.xml
activity_scan_code.xml

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -27,7 +27,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/header_background"
         app:layout_constraintTop_toTopOf="@id/header_background"
-        app:layout_constraintStart_toStartOf="parent"a
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
 
