--- a/app/src/main/res/layout/activity_alternative.xml
+++ b/app/src/main/res/layout/activity_alternative.xml
@@ -210,3 +210,5 @@
             app:menu="@menu/bottom_nav_menu" />
 
     </androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
