--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -52,7 +52,7 @@
         android:layout_width="120dp"
         android:layout_height="180dp"
         android:layout_marginTop="32dp"
-        android:src="@drawable/cocacola_PNG10"
+        android:src="@drawable/cocacola"
         android:elevation="60dp"
         android:padding="10dp"
         app:layout_constraintEnd_toStartOf="@+id/statusContainer"
