--- a/app/src/main/res/layout/activity_category_healthnwellness.xml
+++ b/app/src/main/res/layout/activity_category_healthnwellness.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="8dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="Back"
+        android:onClick="backButton"
         android:padding="12dp"
         android:scaleType="fitCenter"
         android:src="@drawable/balabak"
