--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -153,15 +153,19 @@
     </com.google.android.material.card.MaterialCardView>
 
     <!-- Container for Favorite Toggle -->
+
+    <!-- Container for Favorite Toggle and Alternative Button Row -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/favoriteContainer"
         android:layout_width="0dp"
-        android:layout_height="58dp"
-        android:layout_marginHorizontal="24dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/rounded_toggle_bg_green"
         android:paddingHorizontal="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnAlternative"
+        app:layout_constraintHorizontal_weight="1.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/redCard">
 
@@ -171,13 +175,12 @@
             android:layout_height="wrap_content"
             android:text="Add to Favorite"
             android:textColor="#FFFFFF"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Changed to Standard Switch -->
         <Switch
             android:id="@+id/favoriteToggle"
             android:layout_width="wrap_content"
@@ -187,6 +190,27 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnAlternative"
+        android:layout_width="0dp"
+        android:layout_height="61dp"
+        android:layout_marginEnd="24dp"
+        android:backgroundTint="#FFFFFF"
+        android:text="Alternative"
+        android:onClick="alternativeClicked"
+        android:textColor="#4CAF50"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:textAllCaps="false"
+        app:cornerRadius="30dp"
+        app:strokeColor="#4CAF50"
+        app:strokeWidth="1dp"
+        app:layout_constraintBottom_toBottomOf="@+id/favoriteContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@+id/favoriteContainer"
+        app:layout_constraintTop_toTopOf="@+id/favoriteContainer" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/whiteCard"
