--- a/app/src/main/res/layout/activity_category_healthnwellness.xml
+++ b/app/src/main/res/layout/activity_category_healthnwellness.xml
@@ -65,8 +65,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/floatingNavContainer"
-        android:layout_width="374dp"
-        android:layout_height="81dp"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="20dp"
         app:cardCornerRadius="35dp"
@@ -78,7 +78,7 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNav"
             android:layout_width="match_parent"
-            android:layout_height="94dp"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:itemIconTint="#9CA3AF"
             app:itemRippleColor="#3B82F6"
@@ -87,5 +87,6 @@
             app:menu="@menu/bottom_nav_menu" />
 
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
