--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
     <Button
         android:id="@+id/btnGetStarted"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
         android:text="Start Scanning"
