--- a/app/src/main/res/layout/activity_scan_code.xml
+++ b/app/src/main/res/layout/activity_scan_code.xml
@@ -117,8 +117,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/floatingNavContainer"
-        android:layout_width="374dp"
-        android:layout_height="81dp"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="20dp"
         app:cardCornerRadius="35dp"
@@ -130,7 +130,7 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNav"
             android:layout_width="match_parent"
-            android:layout_height="94dp"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:itemIconTint="#9CA3AF"
             app:itemRippleColor="#3B82F6"
