--- a/app/src/main/res/layout/activity_alternative.xml
+++ b/app/src/main/res/layout/activity_alternative.xml
@@ -40,7 +40,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="Product Alternative For CocaCola"
+        android:text="Product Alternative"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -114,6 +114,7 @@
         app:layout_constraintTop_toBottomOf="@+id/mainCard">
 
         <TextView
+            android:id="@+id/tvReason"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp"
