--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ConsciesCart"
+        android:text="EthicalScanner"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
